cc_library(
    name = "Vector3",
    hdrs = [
        "Vector3.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "Seconds",
    hdrs = [
        "Seconds.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "AlignedAllocator",
    hdrs = [
        "AlignedAllocator.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/playground/dod/PhysicsSystem:PhysicsSystem",
    ],
)
