cc_library(
    name = "PhysicsSystem",
    srcs = [
        "PhysicsSystem.cpp",
    ],
    hdrs = [
        "PhysicsSystem.h",
    ],
    deps = [
        "//src/playground/dod:PhysicsBody",
        "//src/playground/dod:PhysicsConfig",
        "//src/playground:Seconds",
        "//src/playground:AlignedAllocator",
    ],
    visibility = [
        "//visibility:public",
    ],
)
